--- a/products.html
+++ b/products.html
@@ -145,31 +145,35 @@
   cursor: pointer;
 }
 
-/* Wrapper to hold the image and the text together */
+/* --- NEW OVERLAY STYLES --- */
+
+/* Wrapper keeps the image and overlay together */
 .img-wrapper {
   position: relative;
-  overflow: hidden; /* Ensures text stays inside the rounded corners */
+  overflow: hidden;
+  border-radius: 12px 12px 0 0; /* Matches card corners */
 }
 
-/* The text that appears on hover */
+/* The name overlay - hidden by default */
 .img-overlay {
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
-  background: rgba(0, 0, 0, 0.7); /* Dark background */
-  color: #ffd700; /* Matching your HexRide Gold */
+  background: rgba(0, 0, 0, 0.75); /* Dark semi-transparent background */
+  color: #ffd700; /* HexRide Gold */
   text-align: center;
-  padding: 8px 0;
-  font-weight: bold;
-  font-size: 14px;
-  transform: translateY(100%); /* Hides it by pushing it down */
-  transition: transform 0.3s ease-in-out;
-  z-index: 20; /* Ensures it sits on top of the image */
+  padding: 10px 0;
+  font-weight: 600;
+  font-size: 15px;
+  transform: translateY(100%); /* Pushed down out of view */
+  transition: transform 0.3s ease-out;
+  z-index: 10;
+  pointer-events: none; /* Lets clicks pass through to the image link if needed */
 }
 
-/* When hovering the wrapper, slide the text up */
-.img-wrapper:hover .img-overlay {
+/* Slide up on hover */
+.product-card:hover .img-overlay {
   transform: translateY(0);
 }  
 
@@ -238,111 +242,127 @@
 
   <div class="product-grid-page">
 
-    <!-- PRODUCT ITEM -->
     <div class="product-card">
-  
-  <div class="img-wrapper">
-      <img src="img/pro-black.png" alt="Rider Pro Black" class="responsive-img">
-      <div class="img-overlay">Rider Pro Black</div>
-  </div>
-
-  <h3>Rider Pro Black</h3>
-  <p>Full-face matte black helmet with strong ABS shell.</p>
-  <p>Price: 5000/-</p>
-  <a href="order.html?product=Rider Pro Black" class="btn">Order Now</a>
-</div>
-
-    <div class="product-card">
-      <img src="img/firered.png" alt="FireEdge Red" class="responsive-img">
-      <h3>FireEdge Red</h3>
-      <p>Sporty red helmet with dual visor and airflow vents.</p>
-      <p>Price: 7500/-</p>
-     <a href="order.html?product=FireEdge Red" class="btn">Order Now</a>
-
+      <div class="img-wrapper">
+        <img src="img/pro-black.png" alt="Rider Pro Black" class="responsive-img">
+        <div class="img-overlay">Rider Pro Black</div>
+      </div>
+      <h3>Rider Pro Black</h3>
+      <p>Full-face matte black helmet with strong ABS shell.</p>
+      <p>Price: 5000/-</p>
+      <a href="order.html?product=Rider Pro Black" class="btn">Order Now</a>
     </div>
 
     <div class="product-card">
-      <img src="img/aero.png" alt="AeroShield White" class="responsive-img">
+      <div class="img-wrapper">
+        <img src="img/firered.png" alt="FireEdge Red" class="responsive-img">
+        <div class="img-overlay">FireEdge Red</div>
+      </div>
+      <h3>FireEdge Red</h3>
+      <p>Sporty red helmet with dual visor and airflow vents.</p>
+      <p>Price: 7500/-</p>
+      <a href="order.html?product=FireEdge Red" class="btn">Order Now</a>
+    </div>
+
+    <div class="product-card">
+      <div class="img-wrapper">
+        <img src="img/aero.png" alt="AeroShield White" class="responsive-img">
+        <div class="img-overlay">AeroShield White</div>
+      </div>
       <h3>AeroShield White</h3>
       <p>Aerodynamic lightweight helmet for comfort riding.</p>
       <p>Price: 6700/-</p>
       <a href="order.html?product=AeroShield White" class="btn">Order Now</a>
-
     </div>
 
     <div class="product-card">
       <span class="sale-badge">Sale</span>
-      <img src="img/stormx.png" alt="StormX Helmet" class="responsive-img">
+      <div class="img-wrapper">
+        <img src="img/stormx.png" alt="StormX Helmet" class="responsive-img">
+        <div class="img-overlay">StormX Ultra</div>
+      </div>
       <h3>StormX Ultra</h3>
       <p>ISI-approved helmet with heavy-duty ABS shell.</p>
       <p>Price: <del style="color:red; font-size: 0.9em;">6500/-</del> <b>5000/-</b></p>
       <a href="order.html?product=StormX Ultra" class="btn">Order Now</a>
-
     </div>
 
     <div class="product-card">
-      <img src="img/thunder.png" alt="ThunderStrike Pro" class="responsive-img">
+      <div class="img-wrapper">
+        <img src="img/thunder.png" alt="ThunderStrike Pro" class="responsive-img">
+        <div class="img-overlay">ThunderStrike Pro</div>
+      </div>
       <h3>ThunderStrike Pro</h3>
       <p>Stay Safe. Stay Fast. Go ThunderStrike.</p>
       <p>Price: 4000/-</p>
-     <a href="order.html?product=ThunderStrike Pro" class="btn">Order Now</a>
-
+      <a href="order.html?product=ThunderStrike Pro" class="btn">Order Now</a>
     </div>
 
     <div class="product-card">
-      <img src="img/titan.png" alt="Titan Glide" class="responsive-img">
+      <div class="img-wrapper">
+        <img src="img/titan.png" alt="Titan Glide" class="responsive-img">
+        <div class="img-overlay">Titan Glide</div>
+      </div>
       <h3>Titan Glide</h3>
       <p>Smooth Protection. Strong Performance. Titan Glide.</p>
       <p>Price: 5500/-</p>
       <a href="order.html?product=Titan Glide" class="btn">Order Now</a>
-
     </div>
 
     <div class="product-card">
-      <img src="img/phantom.png" alt="Phantom Aero-X" class="responsive-img">
+      <div class="img-wrapper">
+        <img src="img/phantom.png" alt="Phantom Aero-X" class="responsive-img">
+        <div class="img-overlay">Phantom Aero-X</div>
+      </div>
       <h3>Phantom Aero-X</h3>
       <p>“Ultra-aerodynamic helmet built for speed, style, and safety.”</p>
       <p>Price: 7500/-</p>
       <a href="order.html?product=Phantom Aero-X" class="btn">Order Now</a>
-
     </div>
 
     <div class="product-card">
-      <img src="img/wolfen.png" alt="WolfenX Beast Mode" class="responsive-img">
+      <div class="img-wrapper">
+        <img src="img/wolfen.png" alt="WolfenX Beast Mode" class="responsive-img">
+        <div class="img-overlay">WolfenX Beast Mode</div>
+      </div>
       <h3>WolfenX Beast Mode</h3>
       <p>“Unleash the beast—wild graphics, wild performance.”</p>
       <p>Price: 6700/-</p>
       <a href="order.html?product=WolfenX Beast Mode" class="btn">Order Now</a>
-
     </div>
 
     <div class="product-card">
-      <img src="img/racerx.png" alt="RacerX Velocity 92" class="responsive-img">
+      <div class="img-wrapper">
+        <img src="img/racerx.png" alt="RacerX Velocity 92" class="responsive-img">
+        <div class="img-overlay">RacerX Velocity 92</div>
+      </div>
       <h3>RacerX Velocity 92</h3>
       <p>“Unmatched speed, unbeatable style.”</p>
       <p>Price: 4000/-</p>
       <a href="order.html?product=RacerX Velocity 92" class="btn">Order Now</a>
-
     </div>
 
     <div class="product-card">
-      <img src="img/trailhawk.png" alt="TrailHawk Adventure Pro" class="responsive-img">
+      <div class="img-wrapper">
+        <img src="img/trailhawk.png" alt="TrailHawk Adventure Pro" class="responsive-img">
+        <div class="img-overlay">TrailHawk Adventure Pro</div>
+      </div>
       <h3>TrailHawk Adventure Pro</h3>
       <p>“Conquer dirt, sand, and mountains with confidence.”</p>
       <p>Price: 8400/-</p>
       <a href="order.html?product=TrailHawk Adventure Pro" class="btn">Order Now</a>
-
     </div>
 
     <div class="product-card">
-      <img src="img/nightguard.png" alt="NightGuard Tactical VX" class="responsive-img">
+      <div class="img-wrapper">
+        <img src="img/nightguard.png" alt="NightGuard Tactical VX" class="responsive-img">
+        <div class="img-overlay">NightGuard Tactical VX</div>
+      </div>
       <h3>NightGuard Tactical VX</h3>
       <p>“Futuristic armor meets advanced road safety.”</p>
       <p>Price: 8900/-</p>
       <a href="order.html?product=NightGuard Tactical VX" class="btn">Order Now</a>
-
     </div>
-
 </div>
 </section>
 
@@ -588,6 +608,7 @@ setTimeout(showNotification, 3000);
   
 </body>
 </html>
+
 
 
 
